--- a/adyen-appexchange/force-app/main/default/classes/AdyenB2BConstants.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenB2BConstants.cls
@@ -7,6 +7,8 @@ public with sharing class AdyenB2BConstants {
 
     public static final String DEFAULT_PAYMENT_GATEWAY_NAME = 'Adyen';
     public static final String CARD_PAYMENT_METHOD_TYPE = 'scheme';
+    public static final String BANCONTACT_CARD_PAYMENT_METHOD_TYPE = 'bcmc';
+    public static final String BANCONTACT_MOBILE_PAYMENT_METHOD_TYPE = 'bcmc_mobile';
 
     public static final Map<String,String> ADYEN_PAYMENT_TYPE_TO_SF_TYPE = new Map<String,String>{
             'visa' => 'Visa',
